fix: menu incorrect width on safari issue

--- a/src/widgets/school-menu/ui/school-menu/school-menu.module.scss
+++ b/src/widgets/school-menu/ui/school-menu/school-menu.module.scss
@@ -22,13 +22,16 @@
   .school-list {
     display: flex;
     flex-flow: column wrap;
-    gap: 19px;
-    column-gap: 40px;
-    align-items: baseline;
+    gap: 19px 40px;
 
+    width: max-content;
     max-height: 280px;
 
     list-style-type: none;
+
+    &:has(:nth-child(5)) {
+      width: 512px;
+    }
 
     @include media-mobile-landscape {
       column-gap: 10px;
